<resources>
    <string name="app_name">INGRESO AL TEC</string>


    <string name="tittle_fragment">Inicio de sesión</string>
    <string name="tittle_User">Usuario: </string>
    <string name="tittle_pwd">Contraseña: </string>
    <string name="tittle_boton">Iniciar de Sesión</string>
    <string name="instrucciones">Contéstalo de la forma mas honesta posible y no relacionar con otros síntomas que no sean COVID</string>
    <string name="pregunta_1">¿Has tenido contacto con personas infectadas con COVID 19?</string>

    <string name="boton_encuesta">Encuesta</string>
    <string name="Button_perfil">Datos del perfil</string>
    <string name="button_Qr">Generador de Qr</string>
    <string name="button_lector">Lector de Qr</string>
    <string name="Tema_de_menu">aqui va el tema del menu</string>
    <string name="Texto_menu">Lorem ipsum dolor sit amet consectetur adipiscing elit, mus eros erat euismod natoque primis, luctus dictum torquent pulvinar congue magnis. Potenti justo leo eget morbi vehicula netus accumsan sociosqu nam convallis, torquent id curabitur imperdiet nec conubia fusce dignissim. Ante feugiat etiam cum condimentum netus vehicula ornare, dapibus facilisis varius ultrices morbi iaculis, sodales cursus laoreet cubilia platea sollicitudin.
        Rutrum nam luctus risus lobortis commodo quisque, tincidunt elementum eleifend dui massa volutpat, ac himenaeos libero tortor dignissim. Rhoncus fermentum potenti ultricies vel lacinia ante arcu curae congue, habitasse varius tempus dictum leo vulputate elementum at, porttitor habitant sem dapibus placerat sapien sodales penatibus. Nunc ut vivamus potenti interdum taciti duis, gravida diam himenaeos sed sapien, aptent ultrices fringilla rhoncus dui.</string>
    <string name="perfil_date">Datos de Perfil</string>
    <string name="id">numero de control: </string>
    <string name="uss">nombre: </string>
    <string name="apellidoP">apellido P: </string>
    <string name="apellidoM">apellido M: </string>
    <string name="correo">correo institucional: </string>
    <string name="contraseña">contraseña :</string>
    <string name="edad">edad: </string>
    <string name="telefono">telefono: </string>
    <string name="usuario">Usuario:</string>
    <string name="tecnol_gico_de_estudios_superiores_de_jocotitl_n">TECNOLÓGICO DE ESTUDIOS SUPERIORES DE JOCOTITLÁN</string>
    <string name="btnCamara">Camara</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>



</resources>